# calcium_rv32_emu

./: CMakeLists.txt  build_program.sh  main.c  program.elf  program.h  program.s
include/: addr_space.c  addr_space.h  bootloader.c  bootloader.h  decoder.c  rv32i.h  terminal.c  terminal.h  types.h
include/bootrom/: bootrom.elf  bootrom.s  bootrom_hex.h  build_bootrom.sh
